--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "dependencies": {
     "@astrojs/netlify": "^1.2.1",
     "astro": "^1.6.10"
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1",
+    "prettier-plugin-astro": "^0.7.0"
   }
 }
